Minor styling fix, fix dev documentation and vagrant minion key accept

--- a/app/components/events/Event.less
+++ b/app/components/events/Event.less
@@ -3,6 +3,8 @@
 }
 
 :local(.header) {
+    padding: 2px 4px;
+    background-color: lightblue;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
