Added sample highstate, fixed display of empty objects

--- a/app/Elements/StructuredElement.less
+++ b/app/Elements/StructuredElement.less
@@ -27,8 +27,12 @@
     }
 
     .object-collapsed:after {
-        content: '[...]';
+        content: '{...}';
         cursor: pointer;
+    }
+
+    .object.empty:after {
+        content: '{ }'
     }
 
     .array {
