Download as json button implemented, closes #11

--- a/app/elements/StructuredElement.less
+++ b/app/elements/StructuredElement.less
@@ -62,5 +62,15 @@
     }
 }
 
+:local(.download) {
+    z-index: 10;
+    position: absolute;
+    top: 5px;
+    right: 5px;
+}
+
+:local(.downloadPlacement) {
+    position: relative;
+}
 
 
