Various fixes. Fixed header position.

--- a/app/components/TabHeaders.less
+++ b/app/components/TabHeaders.less
@@ -1,5 +1,18 @@
+:local(.this) {
+    min-height: 48px;
+}
+
+:local(.tabs) {
+    left: 0;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 100;
+}
+
 :local(.logout) {
-    right: 8px;
+    right: 0;
     position: absolute;
-    top: 8px;
+    top: 0;
+    z-index: 100;
 }
