Pimp palette and github logo

--- a/app/components/TabHeaders.less
+++ b/app/components/TabHeaders.less
@@ -9,7 +9,7 @@
 }
 
 :local(.buttons) {
-    background-color: #00bcd4;
+    background-color: #27586B;
     z-index: 100;
     display: flex;
     span.material-icons {
@@ -26,5 +26,8 @@
     width: 24px;
     vertical-align: middle;
     padding: 12px;
-    color: white;
+    opacity: 0.6;
+    &:hover {
+        opacity: 1.0;
+    };
 }
