Various smaller fixes

--- a/app/components/execute/SearchDisplay.less
+++ b/app/components/execute/SearchDisplay.less
@@ -6,3 +6,10 @@
 :local(.content) {
     padding: 4px;
 }
+
+:local(.function) {
+    cursor: pointer;
+    &:hover {
+        background-color: #c2e7e4;
+    }
+}
