Some more styling

--- a/app/elements/StructuredElement.less
+++ b/app/elements/StructuredElement.less
@@ -1,4 +1,6 @@
 :local(.this) {
+    word-break: break-all;
+
     .object {
         cursor: default;
         display: table;
@@ -8,6 +10,7 @@
 
     .object-key {
         cursor: pointer;
+        word-break: normal;
     }
 
     .object-key,.object-value {
