--- a/app/components/TabHeaders.less
+++ b/app/components/TabHeaders.less
@@ -1,11 +1,15 @@
 :local(.this) {
-    min-height: 48px;
+    height: 48px;
     display: flex;
+    position: fixed;
+    left: 0;
+    right:0;
+    top: 0;
+    z-index: 100;
 }
 
 :local(.tabs) {
     flex-grow: 1;
-    z-index: 100;
 }
 
 :local(.buttons) {
