Remove win 3.11 styling, fixes #4

--- a/app/components/jobs/JobSummary.less
+++ b/app/components/jobs/JobSummary.less
@@ -1,5 +1,5 @@
 :local(.this) {
-    padding: 2px 4px;
+    padding: 7px;
     margin: 10px;
 
     &.filtered {
@@ -8,9 +8,12 @@
 }
 
 :local(.header) {
-    padding: 2px 4px;
-    background-color: lightblue;
+    padding: 6px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+}
+
+:local(.joblabel) {
+    padding-right: 4px;
 }
