--- a/app/containers/tabs/ExecuteTab.less
+++ b/app/containers/tabs/ExecuteTab.less
@@ -1,3 +1,10 @@
+:local(.this) {
+    > * {
+        margin: 8px;
+        padding: 8px;
+    }
+}
+
 :local(.submit) {
     margin: 8px auto;
     max-width: 120px;
