--- a/app/elements/StructuredElement.less
+++ b/app/elements/StructuredElement.less
@@ -1,11 +1,14 @@
 :local(.this) {
     word-break: break-all;
+    width: 100%;
+    height: 100%;
 
     .object {
         cursor: default;
         display: table;
-        border: 2px solid grey;
-        background: lightgrey;
+        padding: 5px;
+        width: 100%;
+        height: 100%;
     }
 
     .object-key {
@@ -40,8 +43,9 @@
 
     .array {
         cursor: default;
-        border: 2px solid deepskyblue;
-        background: lightskyblue;
+        padding: 5px;
+        width: 100%;
+        height: 100%;
     }
 
     .array-item {
