--- a/app/components/minions/Minion.less
+++ b/app/components/minions/Minion.less
@@ -1,12 +1,15 @@
 :local(.this) {
-    padding: 2px 4px;
+    padding: 7px;
     margin: 10px;
 }
 
 :local(.header) {
-    padding: 2px 4px;
-    background-color: lightblue;
+    padding: 6px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+}
+
+:local(.minionlabel) {
+    padding-right: 4px;
 }
