Implement minion highstate and pillar fetching, closes #8 and #9

--- a/app/components/minions/Minion.less
+++ b/app/components/minions/Minion.less
@@ -13,3 +13,14 @@
 :local(.minionlabel) {
     padding-right: 4px;
 }
+
+:local(.button) {
+    display: inline-block;
+    padding: 4px;
+}
+
+:local(.body) {
+    > * {
+        padding: 4px;
+    }
+}
