--- a/app/components/execute/ExecutedCommand.less
+++ b/app/components/execute/ExecutedCommand.less
@@ -3,7 +3,7 @@
     margin: 10px;
 
     .header {
-
+        margin: 4px;
     }
 
     .header-col {
@@ -13,4 +13,17 @@
         white-space: nowrap;
         text-overflow: ellipsis;
     }
+
+    .summary {
+        padding: 4px;
+    }
+
+    .body-element {
+        margin: 4px;
+    }
+}
+
+:local(.button) {
+    display: inline-block;
+    padding: 4px;
 }
